secondfile/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Access_Speed__c</fullName>
        <label>Access Speed</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Network Services</fullName>
                </value>
                <value>
                    <fullName>Mobility Services</fullName>
                </value>
                <value>
                    <fullName>Cloud &amp; Hosting Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsValid__c</fullName>
        <description>This is used to check validity of a product based on the effective and expiry date</description>
        <formula>IF(NOT(ISNULL(Apttus_Config2__EffectiveDate__c)) ||
 NOT(ISNULL(Apttus_Config2__ExpirationDate__c )),
 DATEVALUE(Apttus_Config2__ExpirationDate__c) &gt;= TODAY() ||
 DATEVALUE(Apttus_Config2__EffectiveDate__c) &lt;= TODAY(),
 IF(ISNULL(Apttus_Config2__EffectiveDate__c) &amp;&amp; 
 ISNULL(Apttus_Config2__ExpirationDate__c),TRUE,FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_New_Name__c</fullName>
        <label>Product New Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>For controlling display sequence</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Product1__c</fullName>
        <label>Sub Product1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Product2__c</fullName>
        <label>Sub Product2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>